--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "llparse",
-  "version": "1.0.0",
+  "version": "1.0.0-beta0",
   "main": "lib/llparse.js",
   "scripts": {
     "lint": "eslint test/*.js test/**/*.js lib/*.js lib/**/*.js lib/**/**/*.js",
