--- a/examples/http/Makefile
+++ b/examples/http/Makefile
@@ -1,7 +1,9 @@
+CC ?= clang
+
 all: http
 
 http: main.c http.ll
-	clang -g3 -Os -flto -fvisibility=hidden -Wall http.ll main.c -o $@
+	$(CC) -g3 -Os -flto -fvisibility=hidden -Wall http.ll main.c -o $@
 
 http.ll: index.js
 	node $< > $@
