--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "type": "git",
     "url": "gh:indutny/llparse"
   },
-  "description": ""
+  "description": "Generating parsers in LLVM IR"
 }
