--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Fedor Indutny <fedor@indutny.com> (http://darksi.de/)",
   "license": "MIT",
   "dependencies": {
+    "debug": "^3.1.0",
     "llvm-ir": "^1.8.0"
   },
   "devDependencies": {
