--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "author": "Fedor Indutny <fedor@indutny.com> (http://darksi.de/)",
   "license": "MIT",
   "dependencies": {
-    "debug": "^3.1.0",
-    "llvm-ir": "^1.8.0"
+    "bitcode": "^1.0.1",
+    "debug": "^3.1.0"
   },
   "devDependencies": {
     "async": "^2.6.0",
-    "eslint": "^4.18.1",
-    "llparse-test-fixture": "^1.2.1",
-    "mocha": "^5.0.1"
+    "eslint": "^4.18.2",
+    "llparse-test-fixture": "git://github.com/indutny/llparse-test-fixture.git",
+    "mocha": "^5.0.4"
   },
   "directories": {
     "lib": "lib",
