code/node: add cconv/linkage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Compile LLParse graph to bitcode",
   "main": "lib/compiler.js",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
     "build": "tsc",
@@ -38,7 +39,7 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
-    "bitcode": "^1.1.1",
-    "llparse-builder": "^1.0.0-beta6"
+    "bitcode": "^1.1.2",
+    "llparse-builder": "^1.0.0-beta7"
   }
 }
