--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "llparse-compiler",
   "version": "1.0.0",
   "description": "Compile LLParse graph to bitcode",
-  "main": "lib/compiler.js",
+  "main": "lib/compiler/index.js",
+  "types": "lib/compiler/index.d.ts",
   "files": [
     "lib",
     "src"
@@ -11,7 +12,7 @@
     "build": "tsc",
     "clean": "rm -rf lib",
     "prepare": "npm run clean && npm run build",
-    "lint": "tslint -c tslint.json src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts",
+    "lint": "tslint -c tslint.json src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts",
     "mocha": "mocha -r ts-node/register/type-check --reporter spec test/*-test.ts",
     "test": "npm run mocha && npm run lint"
   },
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.7",
+    "llparse-test-fixture": "git://github.com/indutny/llparse-test-fixture.git#feature/ts",
     "mocha": "^5.0.4",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
@@ -40,6 +42,6 @@
   },
   "dependencies": {
     "bitcode": "^1.1.3",
-    "llparse-builder": "^1.0.0-beta8"
+    "llparse-builder": "^1.0.0-beta9"
   }
 }
