--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "llparse",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "Compile parsers to LLVM bitcode",
   "main": "lib/api.js",
   "types": "lib/api.d.ts",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.7",
-    "llparse-test-fixture": "git://github.com/indutny/llparse-test-fixture.git#feature/ts",
+    "llparse-test-fixture": "git://github.com/indutny/llparse-test-fixture.git",
     "mocha": "^5.0.4",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
@@ -42,6 +42,6 @@
   },
   "dependencies": {
     "bitcode": "^1.1.4",
-    "llparse-builder": "^1.0.0-beta11"
+    "llparse-builder": "^1.0.0"
   }
 }
