--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "llparse",
-  "version": "3.0.0",
+  "version": "4.0.0-beta0",
   "description": "Compile parsers to LLVM bitcode",
   "main": "lib/api.js",
   "types": "lib/api.d.ts",
