--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   },
   "dependencies": {
     "bitcode": "^1.2.0",
-    "debug": "^3.1.0",
-    "llparse-builder": "^1.3.0"
+    "debug": "^3.1.0"
   }
 }
