package: install `llparse-frontend`

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "bitcode": "^1.2.0",
-    "debug": "^3.1.0"
+    "debug": "^3.1.0",
+    "llparse-frontend": "^1.0.1"
   }
 }
