--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/debug": "0.0.30",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.7",
-    "llparse-test-fixture": "git://github.com/indutny/llparse-test-fixture.git",
+    "llparse-test-fixture": "git://github.com/indutny/llparse-test-fixture.git#master",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
@@ -45,6 +45,6 @@
   "dependencies": {
     "bitcode": "^1.2.0",
     "debug": "^3.1.0",
-    "llparse-frontend": "^1.0.1"
+    "llparse-frontend": "^1.0.2"
   }
 }
