--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "llparse",
   "version": "7.0.0",
-  "description": "Compile parsers to LLVM bitcode",
+  "description": "Compile incremental parsers to C code",
   "main": "lib/api.js",
   "types": "lib/api.d.ts",
   "files": [
@@ -23,8 +23,7 @@
   },
   "keywords": [
     "llparse",
-    "compiler",
-    "bitcode"
+    "compiler"
   ],
   "author": "Fedor Indutny <fedor@indutny.com> (http://darksi.de/)",
   "license": "MIT",
@@ -44,7 +43,6 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "bitcode": "^1.2.0",
     "debug": "^3.2.6",
     "llparse-frontend": "^2.0.0"
   }
