--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
   },
   "homepage": "https://github.com/nodejs/llparse#readme",
   "devDependencies": {
-    "@types/debug": "0.0.30",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^10.17.27",
+    "@types/debug": "^4.1.5",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.8",
     "esm": "^3.2.25",
     "llparse-test-fixture": "^5.0.1",
-    "mocha": "^7.2.0",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.6"
+    "mocha": "^8.1.3",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
-    "debug": "^3.2.6",
-    "llparse-frontend": "^2.0.0"
+    "debug": "^4.2.0",
+    "llparse-frontend": "^3.0.0"
   }
 }
