--- a/examples/http/Makefile
+++ b/examples/http/Makefile
@@ -3,7 +3,7 @@ CC ?= clang
 all: http
 
 http: main.c http_parser.bc
-	$(CC) -g3 -flto -Os -fvisibility=hidden -Wall -I. http_parser.bc main.c -o $@
+	$(CC) -g3 -flto -Os -fvisibility=hidden -Wall -I. http_parser.c main.c -o $@
 
 http_parser.bc: index.ts
 	npx ts-node $<
