--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "pretty": true,
     "sourceMap": true,
+    "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true
   },
   "include": [
